RESOLVED FIXED34176
Certain markup causes RTL errors and test displays out of order
https://bugs.webkit.org/show_bug.cgi?id=34176
Summary Certain markup causes RTL errors and test displays out of order
Tim McConnell
Reported 2010-01-26 12:02:13 PST
Created attachment 47431 [details] Markup that causes RTL display problems. Within an RTL block, some content will display incorrectly. For example: <div>This is a <span style="text-decoration: underline;"><em>Test<span></span></em></span></div> In this case, "Test" appears before the rest of the content. It occurs when the spans and styles become complex enough.
Attachments
Markup that causes RTL display problems. (706 bytes, text/html)
2010-01-26 12:02 PST, Tim McConnell
no flags
patch w/ layout test (141.54 KB, patch)
2011-01-25 16:39 PST, Xiaomei Ji
hyatt: review+
Jeremy Moskovich
Comment 1 2010-10-19 08:22:34 PDT
Tested on OS X 10.6: FF 3.6.6: OK Opera 10.63: OK Safari 5.0.1: FAIL
Xiaomei Ji
Comment 2 2011-01-25 16:39:34 PST
Created attachment 80146 [details] patch w/ layout test
Xiaomei Ji
Comment 3 2011-01-25 16:43:42 PST
*** Bug 52497 has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 4 2011-02-01 10:29:18 PST
Comment on attachment 80146 [details] patch w/ layout test r=me
Xiaomei Ji
Comment 5 2011-02-01 12:02:36 PST
Dimitri Glazkov (Google)
Comment 6 2011-02-01 12:30:49 PST
(In reply to comment #5) > Committed r77267: <http://trac.webkit.org/changeset/77267> The layout test has both executable bit and a wrong mime-type set. Can you please fix? Also, please add Chromium baselines when they are ready on the bots.
Note You need to log in before you can comment on or make changes to this bug.